# win32-rs-monitor

./: README.md
get_icon/: Cargo.toml
get_icon/src/: main.rs
monitor/: Cargo.toml  README.md
monitor/src/: main.rs
