[package]
name = "get_icon"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.48", features = [
    "Win32_System_LibraryLoader", 
    "Win32_Foundation", 
    "Win32_UI_Shell", 
    "Win32_Graphics_Gdi", 
    "Win32_UI_WindowsAndMessaging"] }
base64 = "0.21"
image = "0.24"
