[package]
name = "monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
]}